# dapp-contracts

contracts/ego-cw3-multisig/: Cargo.toml
contracts/ego-cw3-multisig/examples/: schema.rs
contracts/ego-cw3-multisig/src/: contract.rs  helper.rs  msg.rs  state.rs
contracts/ego-cw4-group/: Cargo.toml  NOTICE
contracts/ego-cw4-group/examples/: schema.rs
contracts/ego-cw4-group/schema/: ego-cw4-group.json
contracts/ego-cw4-group/schema/raw/: instantiate.json
contracts/ego-cw4-group/src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs  tests.rs
