[package]
name = "ego-cw3-multisig"
version = "0.1.0"
authors = ["Godwin Igwurube <godwin.igwurube@venturec.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  -e CARGO_TERM_COLOR=always \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""


[dependencies]
cosmwasm-schema = "2.0.4"
cosmwasm-std = "2.0.4"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "2.0.0"
cw-controllers="2.0.0"
cw-utils = "2.0.0"
cw2="2.0.0"
cw3 = "2.0.0"
cw4 = "2.0.0"
thiserror="1.0.61"

[dev-dependencies]
cosmwasm-schema = "2.0.4"
